# 3DVertVor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  exampleEnergyMinimization.cpp  exampleHeterogeneousCellTypes.cpp  main.py  stratifiedEpithelial.cpp  tvm.cpp
Cell/: Cell.cpp  Cell.h
Energy/: Interface.cpp  Interface.h  Volume.cpp
Polygon/: Polygon.cpp  Polygon.h
Run/: CMakeLists.txt  Run.cpp  Run.h
Vertex/: Vertex.cpp  Vertex.h
cmake/Modules/: FindNetCDF.cmake
computation/: CMakeLists.txt  Matrices-inline.h  Matrices.cpp  Matrices.h
core/: 2ndEnergyDerivatives.cpp  CMakeLists.txt  Cell-inline.h  Cell.cpp  Cell.h  CellPositionMailbox.cpp  CellPositionMailbox.h  CellType.h  DirectedEdgeOfCell-inline.h  DirectedEdgeOfCell.h  DirectedFace-inline.h  DirectedFace.cpp  DirectedFace.h  PeriodicBox.cpp  PeriodicBox.h  PeriodicityVector3D.h  Tessellation-inline.h  Tessellation.cpp  Tessellation.h  Tessellation_voronoi.cpp  VertexOfCell-inline.h  VertexOfCell.cpp  VertexOfCell.h  config.h
dynamicalMatrix/: DynamicalMatrixOld.h  DynamicalMatrixTest.h
misc/: CMakeLists.txt
misc/computations/: CompatibilityMatrix.h  Diagonalization.h  DiagonalizationOfExtendedHessian.h  DiagonalizationOfUnnamedPart.h  Hessian.h  HessianWithNamedDofs.h
misc/geometry/: CMakeLists.txt  Ellipsoid.cpp  Ellipsoid.h  EllipsoidBySolidPolyhedron.cpp   EllipsoidBySolidPolyhedron.h  EllipsoidByUnitPointMassPolyhedron.cpp  EllipsoidByUnitPointMassPolyhedron.h  Matrix3x3.cpp  Matrix3x3.h  Matrix3x3x3.cpp  Matrix3x3x3.h  SphericalHarmonicsForVector.h  Vector3D.h
misc/minimization/: CMakeLists.txt  CgMinimizer-inline.h  CgMinimizer.h  CgMinimizerSearchDirectionUpdates.h  FireMinimizer.cpp  FireMinimizer.h  LmDerivativeNewton.h  MinimizerWithDerivative.h  SimpleGradient.cpp  SimpleGradient.h
misc/other/: CMakeLists.txt  DerivedContainer.h  Exception.cpp  Exception.h  MovieCreator.cpp  MovieCreator.h  Random.cpp  Random.h  fileIo.h  misc-math.h
povray/: CMakeLists.txt  Color.h  PovrayGenerator.cpp  PovrayGenerator.h  PovrayMesh.h
spheres/: CMakeLists.txt  CellWithSphere.h  CellWithSphereParameters.h  DirectedSphereOverlap.h  Potentials.cpp  Potentials.h  TessellationWithSpheres-inline.h  TessellationWithSpheres.h
voro++/: CMakeLists.txt  config.hh  container.cc  container.hh  container_prd.hh
